--- a/app/src/main/res/layout/activity_dairy.xml
+++ b/app/src/main/res/layout/activity_dairy.xml
@@ -57,19 +57,26 @@ match parent will take complete height or width of text
    textColor indicates the color for text-->
     <EditText
         android:id="@+id/note_et_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
         android:ems="10"
         android:inputType="textMultiLine"
         android:background="#390613"
         android:layout_below="@+id/note_et_title"
         android:textColorHint="#fff"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/note_et_title"
-        android:layout_alignEnd="@+id/note_et_title"
-        android:layout_alignParentBottom="true"
         android:hint="@string/enter_your_note"
         android:textColor="#fff"
         android:gravity="top"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/note_et_content"
+        android:layout_marginEnd="13dp"
+        android:id="@+id/addnotesbutton"
+        android:src="@android:drawable/ic_menu_my_calendar"
+        android:layout_marginRight="13dp"
+        android:layout_marginTop="11dp" />
 </RelativeLayout><!--RelativeLayout ends here-->
